# Dagalok-v0.0.1

./: Cargo.toml  README.md
server/: Cargo.toml
server/src/: lib.rs
src/: camera.rs  main.rs
src/animations/: mod.rs  run_animations.rs  setup_animations.rs
src/asset_manager/: mod.rs
src/input/: mod.rs
src/module_bindings/: client.rs  create_player_reducer.rs  entity_component.rs  mod.rs  player_action.rs  player_component.rs  player_stances.rs  stdb_vector_3.rs  update_player_action_reducer.rs  update_player_position_reducer.rs  update_player_stance_reducer.rs
src/network/: connect_and_register.rs  mod.rs  player_connected.rs  player_updates.rs  uncb_receiver.rs
src/player/: mod.rs  movement.rs  player_bundle.rs  spawn_player.rs
src/terrain/: mod.rs  terrain_bundle.rs  terrain_setup.rs
